GNOME Bugzilla – Bug 729487
The GESEffect.active property is deserialized from xges always as True
Last modified: 2015-06-24 14:42:47 UTC
Steps to reproduce: - Add a clip to the timeline in Pitivi, add an effect to it, mark it as non active, save the project. - Restart the app, notice the effect is active when it should be not. For example: <effect asset-id='agingtv' clip-id='0' type-name='GESEffect' track-type='4' track-id='0' properties='properties, priority=(uint)3, active=(boolean)false, track-type=(int)4;' metadatas='metadatas;' children-properties='properties, qos=(boolean)true, scratch-lines=(uint)7, color-aging=(boolean)true, pits=(boolean)true, dusts=(boolean)true;'> effect.props.active == True when it should be False when the project is loaded from the xges file.
Created attachment 289775 [details] [review] xml-formatter: Do not forget to set properties on the track elements We were just setting children properties, even if the propertie to be set on themselves where properly passed in
Created attachment 289835 [details] [review] xml-formatter: Do not forget to set properties on the track elements We were just setting children properties, even if the propertie to be set on themselves where properly passed in
Attachment 289835 [details] pushed as 21807d6 - xml-formatter: Do not forget to set properties on the track elements